test/sh/error/func/param_unknown_var.sk
external f(x: int)

f(fail)
